# invest-analytics-ui

./: .gitignore  app.py  portfolio.yaml  pyproject.toml  readme.md  retrieve_target.yaml  sample.csv  sample.ipynb  sample.py
data/: ratio.pkl  sharpe.pkl  stocks.pkl
notebooks/: quick_look.ipynb  retrieve.ipynb  visualize.ipynb
