[tool.poetry]
name = "invest-analytics-ui"
version = "0.1.0"
description = ""
authors = ["Ryo Koyajima <koyaaarr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
numpy = "^1.22.4"
streamlit = "^1.10.0"
plotly = "^5.9.0"
PyYAML = "^6.0"
pandas-datareader = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.961"
ipykernel = "^6.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
